--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
         <hr>
         <div id="prod_analysis"></div>
 
+        <h4>Customer Analysis</h4>
+        <hr>
+        <div id="cus_analysis"></div>
+
         <h4>RFM Analysis</h4>
         <hr>
         <div id="rfm"></div>
@@ -39,6 +43,9 @@
     </py-script>
 
     <py-script output="prod_analysis" src="./scripts/product_analysis.py">
+    </py-script>
+
+    <py-script output="cus_analysis" src="./scripts/customer_analysis.py">
     </py-script>
 
     <py-script output="rfm" src="./scripts/RFM_analysis.py">
