--- a/index.html
+++ b/index.html
@@ -1,23 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+
     <script defer src="https://pyscript.net/alpha/pyscript.js"></script>
+    <script src="https://cdn.jsdelivr.net/pyodide/dev/full/pyodide.js"></script>
     <link rel="stylesheet" href="https://pyscript.net/alpha/pyscript.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" type="text/css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+        type="text/css">
     <link rel="stylesheet" href="style.css" type="text/css">
 
-    <py-env> 
-- altair
-- pandas    
+    <py-env>
+        - altair
+        - pandas
     </py-env>
-        
+
 
     <title>3K Analysis</title>
 </head>
+
 <body>
     <div class="container">
         <h2>3Kraters Analysis</h2>
@@ -51,6 +55,7 @@
     <py-script output="rfm" src="./scripts/RFM_analysis.py">
     </py-script>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.js"></script> 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.js"></script>
 </body>
+
 </html>
